RESOLVED FIXED 221054
REGRESSION(r268615): images flicker on apple.com/ios/ios-14
https://bugs.webkit.org/show_bug.cgi?id=221054
Summary REGRESSION(r268615): images flicker on apple.com/ios/ios-14
Antoine Quint
Reported 2021-01-27 12:03:01 PST
If you open apple.com/ios/ios-14 you can see some icons flicker before the phone animation at the top of the page starts.
Attachments
Patch (28.31 KB, patch)
2021-01-27 12:40 PST, Antoine Quint
no flags
Patch (28.43 KB, patch)
2021-01-27 12:47 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-01-27 12:03:20 PST
Antoine Quint
Comment 2 2021-01-27 12:40:42 PST
Antoine Quint
Comment 3 2021-01-27 12:47:06 PST
EWS
Comment 4 2021-01-27 22:54:48 PST
Committed r272004: <https://trac.webkit.org/changeset/272004> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418577 [details].
Antoine Quint
Comment 5 2021-03-01 10:57:11 PST
This caused bug 222545.
Note You need to log in before you can comment on or make changes to this bug.